--- a/styles/favorites.module.css
+++ b/styles/favorites.module.css
@@ -1,5 +1,5 @@
 .dashboard_main {
-    margin-left: 15em;
+    margin-left: 19%;
     padding-left: 40px;
     overflow-y: auto;
     padding-bottom: 20vh;
