--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,7 @@
 .navbar_main {
     display: flex;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+ 
 }
 
 .navbar_a {
@@ -10,15 +11,13 @@
     top: 0;
     background-color:rgba(99, 99, 99, 1);
     width: 100%;
-    height: 20vh;
+    height: 18vh;
     margin-left: 19%;
-    
-    
 }
 
 .navbar_search {
     background-color: black;
-    width: 80vh;
+    width: 56vw;
     height: 7vh;
     border-radius: 32px;
     color: white;
@@ -29,7 +28,6 @@
 }
 
 .navbar_advance {
-    width: 23%;
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
